# assignments

./: README.md
Esiopinnot/Viikko3/ex1/: constants.h  ex1  ex1.cpp  main  main.cpp
Esiopinnot/Viikko3/ex2/: constants.h  main  main.cpp
Esiopinnot/Viikko3/ex3/: ex3  ex3.cpp
Esiopinnot/Viikko3/ex4/: ex4  ex4.cpp
Esiopinnot/Viikko3/ex5/: ex5  ex5.cpp
Esiopinnot/Viikko3/ex6/: ex6  ex6.cpp
Esiopinnot/Viikko3/ex7/: ex7  ex7.cpp
Esiopinnot/Viikko4/assignment/: main  main.cpp  numbers_fail.txt
week1/Tuesday/assignment1/: main  main.cpp
week1/Tuesday/assignment2/: main  main.cpp
week1/Tuesday/assignment3/: main  main.cpp
week1/Tuesday/assignment4/: main  main.cpp
week1/Tuesday/assignment5/: main  main.cpp
week1/Wednesday/assignment2/: main
week1/exgit/: really_important_file
week10/Monday/assignment10_1_1/: main.cpp
week10/Monday/assignment10_1_2/: CMakeLists.txt  main.cpp
week10/Thursday/assignment10_4_1/: CMakeLists.txt  main.cpp
week10/Thursday/assignment10_4_1/json-example-master/: test.json
week10/Wednesday/assignment10_3_1/: main.cpp
week2/Monday/assignment2_1_3/: main  main.cpp
week2/Thursday/assignment2_4_1/: CMakeLists.txt  main.cpp
week2/Thursday/assignment2_4_2/: CMakeLists.txt  main.cpp
week2/Tuesday/assignment2_2_1/: CMakeLists.txt  main.cpp
week2/Tuesday/assignment2_2_2/: CMakeLists.txt  main.cpp
week2/Tuesday/assignment2_2_3/: CMakeLists.txt  main.cpp
week2/Wednesday/assignment2_3_2/: CMakeLists.txt  main.cpp
week3/Monday/assignment3_1_2/: CMakeLists.txt  main.cpp
week3/Tuesday/assignment3_2_1/: main  main.cpp
(+214 files in other folders)
